Add server-side apply support
